# frames

./: Cargo.toml  README.md
examples/: planets.rs
src/: color_string.rs  coord_iter.rs  lib.rs  main.rs  manager.rs  object.rs  test_helpers.rs  vec2d.rs
src/frame_types/: basic.rs  bundle.rs  fill.rs  layout.rs  mask.rs  mod.rs  text.rs  with_modifier.rs
src/manager/: layout_manager.rs  manager.rs  mod.rs
src/mask_rules/: circle.rs  mod.rs
src/modifiers/: circle_mask.rs  mod.rs
src/modifiers/position/: mod.rs  position.rs  update_types.rs
src/prelude/: mod.rs  screenbuf.rs
src/shared/: drawdata.rs  drawsegment.rs  mod.rs
