[package]
name = "frames"
version = "0.1.0"
authors = ["CircuitFire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
coord = {git = "https://github.com/CircuitFire/coord.git"}

[features]
default = []
serde = ["crossterm/serde"]